--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
         "jest": "^28.1.1",
         "prettier": "^2.7.1",
         "ts-jest": "^28.0.5",
-        "ts-node": "^10.8.1",
+        "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.0.0",
         "tsconfig-paths-jest": "^0.0.1",
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "test": "jest PrimsList",
+        "test": "jest DFSOnBST LRU LinearSearchList BinarySearchList TwoCrystalBalls BubbleSort SinglyLinkedList DoublyLinkedList Queue Stack ArrayList MazeSolver QuickSort BTPreOrder BTInOrder BTPostOrder BTBFS CompareBinaryTrees DFSOnBST DFSGraphList Trie BFSGraphMatrix Map MinHeap",
         "clear": "node ./scripts/clear.js",
         "prettier": "prettier --write ./src",
         "generate": "node ./scripts/generate.js",
-        "day": "echo src/day4"
+        "day": "echo src/day1"
     },
     "devDependencies": {
         "@swc-node/register": "^1.6.7"
-    }
+    },
+    "packageManager": "yarn@4.0.0"
 }
